manual-blue-green/app-svc-deploy-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-blue
  namespace: app-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-blue
  template:
    metadata:
      labels:
        app: app-blue
      annotations:
        deployment_slot: blue
    spec:
      containers:
        - name: app-blue
          imagePullPolicy: IfNotPresent
          image: example-docker-image:v2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: podinfo
              mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: labels
                fieldRef:
                  fieldPath: metadata.labels
              - path: annotations
                fieldRef:
                  fieldPath: metadata.annotations
---
apiVersion: v1
kind: Service
metadata:
  name: svc-blue
  namespace: app-prod
spec:
  selector:
    app: app-blue
  ports:
    - protocol: TCP
      port: 3000
  type: LoadBalancer
